Updates and fixes

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
       </header>
 
       <section>
-        <p>(Jennifer’s profile photo)</p>
+      <img src="images/avatar_placeholder.jpg">
 
         <h3>Jennifer Dempsey</h3>
         <h4>Office Manager</h4>
@@ -48,7 +48,7 @@
       </section>
 
       <section>
-        <p>(Jack’s Profile Photo)</p>
+      <img src="images/avatar_placeholder.jpg">
 
         <h3>Jack Range</h3>
         <h4>Investigator</h4>
@@ -57,7 +57,7 @@
       </section>
 
       <section>
-        <p>(Bret’s profile photo)</p>
+      <img src="images/avatar_placeholder.jpg">
 
         <h3>Bret Roberts</h3>
         <h4>District Court Attorney</h4>
@@ -66,7 +66,7 @@
       </section>
 
       <section>
-        <p>(Nat’s profile photo)</p>
+      <img src="images/avatar_placeholder.jpg">
 
         <h3>Nat Jacob</h3>
         <h4>District Court Attorney</h4>
@@ -75,7 +75,7 @@
       </section>
 
       <section>
-        <p>(Ben’s profile photo)</p>
+      <img src="images/avatar_placeholder.jpg">
 
         <h3>Ben Critchlow</h3>
         <h4>Superior Court Attorney</h4>
@@ -84,7 +84,7 @@
       </section>
 
       <section>
-        <p>(Scott’s profile photo)</p>
+      <img src="images/avatar_placeholder.jpg">
 
         <h3>Scott Charlton</h3>
         <h4>Superior Court, Juvenile, and Dependency Attorney</h4>
@@ -93,7 +93,7 @@
       </section>
 
       <section>
-        <p>(Richard’s profile photo)</p>
+      <img src="images/avatar_placeholder.jpg">
 
         <h3>Richard Davies</h3>
         <h4>Director and Superior Court Attorney</h4>
