--- a/faq.html
+++ b/faq.html
@@ -38,7 +38,7 @@
         </header>
 
         <section>
-          <h3>How do I get a Public Defender?:</h3>
+          <h3>How do I get a Public Defender?</h3>
 
           <p>Fill out a “Indigency Screening Form” at the Superior Court Clerk’s office if you are charged with a felony crime, or the District Court Clerk’s office if you are charged with a misdemeanor crime. If you qualify, our office will assign a lawyer to your case.</p>
         </section>
