--- a/contact.html
+++ b/contact.html
@@ -31,31 +31,41 @@
   </header>
 
   <main role="content">
-      <h3>Our Law Office</h3>
+    <article>
+      <header>
+        <h1>Contact Us</h1>
+      </header>
+      
+      <section>
+        <h3>Our Law Office</h3>
 
-      <address>
-        <p>624 Polk Street<br>
-        Port Townsend, WA 98368<br>
-        <em>Email</em> <strong>· <a class="regular_link" href=
-        "mailto:attorney@ptdefense.com">attorney@ptdefense.com</a></strong><br>
-        <em>Phone</em> <strong>· <span>(360) 379-8906</span></strong><br>
-        <em>Fax</em> <strong>· <span>(360) 385-4012</span></strong><br>
-        <a href=
-        "http://www.google.com/maps/search/624+Polk+St,+Port+Townsend,+WA+98368/"
-        target="#">get directions →</a></p>
-      </address>
+        <address>
+          <p>624 Polk Street<br>
+          Port Townsend, WA 98368<br>
+          <em>Email</em> <strong>· <a class="regular_link" href=
+          "mailto:attorney@ptdefense.com">attorney@ptdefense.com</a></strong><br>
+          <em>Phone</em> <strong>· <span>(360) 379-8906</span></strong><br>
+          <em>Fax</em> <strong>· <span>(360) 385-4012</span></strong><br>
+          <a href=
+          "http://www.google.com/maps/search/624+Polk+St,+Port+Townsend,+WA+98368/"
+          target="#">get directions →</a></p>
+        </address>
+      </section>
 
-      <h3>Jefferson County Courthouse</h3>
+      <section>
+        <h3>Jefferson County Courthouse</h3>
 
-      <address>
-        <p>1820 Jefferson Street<br>
-        Port Townsend, WA 98368<br>
-        <em>District Court</em> <strong>· <span>(360) 385-9135</span></strong><br>
-        <em>Superior Court</em> <strong>· <span>(360) 385-9125</span></strong><br>
-        <a href=
-        "https://www.google.com/maps/place/1820+Jefferson+St,+Port+Townsend,+WA+98368/"
-        target="#">get directions →</a></p>
-      </address>
+        <address>
+          <p>1820 Jefferson Street<br>
+          Port Townsend, WA 98368<br>
+          <em>District Court</em> <strong>· <span>(360) 385-9135</span></strong><br>
+          <em>Superior Court</em> <strong>· <span>(360) 385-9125</span></strong><br>
+          <a href=
+          "https://www.google.com/maps/place/1820+Jefferson+St,+Port+Townsend,+WA+98368/"
+          target="#">get directions →</a></p>
+        </address>
+      </section>
+    </article>
   </main>
 
   <footer>
