--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <body>
 
   <header role="banner">
-    <img id="logo" src="images/logo.jpg">
+    <img id="logo" src="images/logo.png">
     <h1>Welcome to Jefferson Associated Counsel</h1>
 
     <h2>Public Defense Office for Jefferson County, WA</h2>
