--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
   <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
-</head>
+</head> 
 <body>
 
   <header role="banner">
@@ -24,7 +24,7 @@
         <p>
           <a href="index.html">home</a>
           <a href="about.html">about us</a>
-          <a href="faq.html">faq &amp; resources</a>
+          <a href="resources.html">faq &amp; resources</a>
           <a href="contact.html">contact us</a>
         </p>
     </nav>
@@ -102,10 +102,5 @@
       </section>
     </article>
   </main>
-
-  <footer>
-    <div class="border"></div>
-    <h4>Local Lawfirm • Trusted • Accessible</h4>
-  </footer>
 </body>
 </html>
