--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <p>
           <a href="index.html">home</a>
           <a href="about.html">about us</a>
-          <a href="faq.html">faq &amp; resources</a>
+          <a href="resources.html">faq &amp; resources</a>
           <a href="contact.html">contact us</a>
         </p>
     </nav>
@@ -62,10 +62,5 @@
       </section>
     </article>
   </main>
-
-  <footer>
-    <div class="border"></div>
-    <h4>Local Lawfirm • Trusted • Accessible</h4>
-  </footer>
 </body>
 </html>
