--- a/index.html
+++ b/index.html
@@ -13,43 +13,61 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
 </head>
 <body>
-
-  <header role="banner">
+  <nav>
     <img id="logo" src="images/logo.png">
-    <h1>Welcome to Jefferson Associated Counsel</h1>
+    <dl>
+      <dt>
+        <a class="current" href="index.html">Home</a>
+      </dt>
+      <dt>
+        <a href="about.html">About Us</a>
+      </dt>
+      <dt>
+        <a href="resources.html">Resources</a>
+      </dt>
+      <dt>
+        <a href="contact.html">Contact Us</a>
+      </dt>
+    </dl>
+    <h5>
+      Jefferson
+      <br>
+      Associated
+      <br>
+      Counsel
+    </h5>
+  </nav>
 
-    <h2>Public Defense Office for Jefferson County, WA</h2>
-
-    <nav>
-        <p>
-          <a href="index.html">home</a>
-          <a href="about.html">about us</a>
-          <a href="faq.html">faq &amp; resources</a>
-          <a href="contact.html">contact us</a>
-        </p>
-    </nav>
-  </header>
+  
 
   <main role="content">
+    <header role="banner">
+      <h1>Jefferson Associated Counsel</h1>
+
+      <h2>Public Defense Office for Jefferson County, Washington</h2>
+    </header>
+
     <article>
-      <header>
-        <h1>Home</h1>   
-      </header>
-
       <section>
-        <h3>About Us</h3>
+        <h3>
+          <a href="about.html">About Us</a>
+        </h3>
 
-        <p>Jefferson Associated Counsel (JAC) organized as a 501(c)(3) non-profit in 2005 to improve the delivery of criminal defense services to the poor in Jefferson County Courts. We provide representation in felony, misdemeanor, juvenile, and dependency cases. <a href="about.html">read more –&gt;</a></p>
+        <p>Jefferson Associated Counsel (JAC) organized as a 501(c)(3) non-profit in 2005 to improve the delivery of criminal defense services to the poor in Jefferson County Courts. We provide representation in felony, misdemeanor, juvenile, and dependency cases. <a href="about.html">Read More &hellip;</a></p>
       </section>
 
       <section>
-        <h3>Faq &amp; Resources</h3>
+        <h3>
+          <a href="resources.html">FAQ &amp; Resources</a>
+        </h3>
 
-        <p>Here are FAQ’s and useful resources. <a href="faq.html">read more –&gt;</a></p>
+        <p>Here are FAQ’s and useful resources. <a href="resources.html">Read More &hellip;</a></p>
       </section>
 
       <section>
-        <h3>Contact Us</h3>
+        <h3>
+          <a href="contact.html">Contact Us</a>
+        </h3>
         
         <address>
           <p>
@@ -67,10 +85,6 @@
       </section>
     </article>
   </main>
-
-  <footer>
-    <div class="border"></div>
-    <h4>Local Lawfirm • Trusted • Accessible</h4>
-  </footer>
+  <div class="mask"></div>
 </body>
 </html>
