--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     <img id="logo" src="images/logo.png">
     <dl>
       <dt>
-        <a class="current" href="index.html">Home</a>
+        <a class="current" href="home.html">Home</a>
       </dt>
       <dt>
         <a href="about.html">About Us</a>
@@ -81,7 +81,7 @@
           </p>
         </address>
         
-        <p>Map</p>
+        <p><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2663.6663756358375!2d-122.76141409999998!3d48.116671200000006!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548fedc79b044371%3A0xd553d478b255fcdb!2s624+Polk+St%2C+Port+Townsend%2C+WA+98368!5e0!3m2!1sen!2sus!4v1409801191837" width="400" height="300" frameborder="0" style="border:0"></iframe></p>
       </section>
     </article>
   </main>
