--- a/resources.html
+++ b/resources.html
@@ -13,114 +13,130 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
 </head>
 <body>
-
-  <header role="banner">
+  <nav>
     <img id="logo" src="images/logo.png">
-    <h1>Welcome to Jefferson Associated Counsel</h1>
+    <dl>
+      <dt>
+        <a href="home.html">Home</a>
+      </dt>
+      <dt>
+        <a href="about.html">About Us</a>
+      </dt>
+      <dt>
+        <a class="current" href="resources.html">Resources</a>
+      </dt>
+      <dt>
+        <a href="contact.html">Contact Us</a>
+      </dt>
+    </dl>
+    <h5>
+      Jefferson
+      <br>
+      Associated
+      <br>
+      Counsel
+    </h5>
+  </nav>
 
-    <h2>Public Defense Office for Jefferson County, WA</h2>
-
-    <nav>
-        <p>
-          <a href="index.html">home</a>
-          <a href="about.html">about us</a>
-          <a href="resources.html">faq &amp; resources</a>
-          <a href="contact.html">contact us</a>
-        </p>
-    </nav>
-  </header>
+  
 
   <main role="content">
-      <article>
-        <header>
-          <h1>FAQ’s</h1>
-          <p>These are the most common questions we get.</p>
-        </header>
+    <header role="banner">
+      <h1>Jefferson Associated Counsel</h1>
 
-        <section>
-          <h3>How do I get a Public Defender?</h3>
+      <h2>Public Defense Office for Jefferson County, Washington</h2>
+    </header>
 
-          <p>Fill out a “Indigency Screening Form” at the Superior Court Clerk’s office if you are charged with a felony crime, or the District Court Clerk’s office if you are charged with a misdemeanor crime. If you qualify, our office will assign a lawyer to your case.</p>
-        </section>
+    <article>
+      <header>
+        <h1>FAQ’s</h1>
+        <p>These are the most common questions we get.</p>
+      </header>
 
-        <section>
-          <h3>I have a warrant out for my arrest, so how do I quash (terminate) it?</h3>
+      <section>
+        <h3>How do I get a Public Defender?</h3>
 
-          <p>For a felony warrant out of <i>Superior Court</i>:</p>
+        <p>Fill out a “Indigency Screening Form” at the Superior Court Clerk’s office if you are charged with a felony crime, or the District Court Clerk’s office if you are charged with a misdemeanor crime. If you qualify, our office will assign a lawyer to your case.</p>
+      </section>
 
-          <p>You can post the bail in person, or through a bail bondsman, at the Jefferson County Superior Court Clerk’s Office. Alternatively, turn yourself in at the jail by 8AM and you will likely have a hearing the same day.</p>
+      <section>
+        <h3>I have a warrant out for my arrest, so how do I quash (terminate) it?</h3>
 
-          <p>*At the hearing, the Judge will decide whether to post further bail, so turning yourself in is no guarantee that you will get to leave the jail afterward.</p>
+        <p>For a felony warrant out of <i>Superior Court</i>:</p>
 
-          <p>For a misdemeanor warrant out of <i>District Court</i>:</p>
+        <p>You can post the bail in person, or through a bail bondsman, at the Jefferson County Superior Court Clerk’s Office. Alternatively, turn yourself in at the jail by 8AM and you will likely have a hearing the same day.</p>
 
-          <p>Show up to the Friday “Warrant Quash” Calendar before 10AM with $100 and a photo ID. Pay the District Court Clerk’s Office and they will put you on the calendar. You can only do this one time per criminal charge. </p>
+        <p>*At the hearing, the Judge will decide whether to post further bail, so turning yourself in is no guarantee that you will get to leave the jail afterward.</p>
 
-          <p>Alternatively you can pay the full amount of bail to the District Court Clerk, at any time, in person or through a bail bond company.</p>
+        <p>For a misdemeanor warrant out of <i>District Court</i>:</p>
 
-          <p>*Remember, although the Judge sometimes offers cash bail (10% of the bail bond amount), this is not the rule, so you may be arrested on the spot for not having the entire bail bond amount. Call our office to find out your bail amount.</p>
-        </section>
+        <p>Show up to the Friday “Warrant Quash” Calendar before 10AM with $100 and a photo ID. Pay the District Court Clerk’s Office and they will put you on the calendar. You can only do this one time per criminal charge. </p>
 
-        <section>
-          <h3>When is my next court date?</h3>
+        <p>Alternatively you can pay the full amount of bail to the District Court Clerk, at any time, in person or through a bail bond company.</p>
 
-          <p><a href="http://dw.courts.wa.gov/?fa=home.fmcdTerms">Find My Court Date</a></p>
+        <p>*Remember, although the Judge sometimes offers cash bail (10% of the bail bond amount), this is not the rule, so you may be arrested on the spot for not having the entire bail bond amount. Call our office to find out your bail amount.</p>
+      </section>
 
-          <p>To verify, call our office, or the correct Clerk’s Office.</p>
-        </section>
-      </article>
+      <section>
+        <h3>When is my next court date?</h3>
 
-      <article>
-        <header>
-          <h1>Resources</h1>
-        </header>
-        
-        <section>
-          <h3>Jefferson County District Court Clerk’s Office</h3>
+        <p><a href="http://dw.courts.wa.gov/?fa=home.fmcdTerms">Find My Court Date</a></p>
 
-          <p>(360) 385-9135</p>
-        </section>
+        <p>To verify, call our office, or the correct Clerk’s Office.</p>
+      </section>
+    </article>
 
-        <section>
-          <h3>Jefferson County Superior Court Clerk’s Office</h3>
+    <article>
+      <header>
+        <h1>Resources</h1>
+      </header>
+      
+      <section>
+        <h3>Jefferson County District Court Clerk’s Office</h3>
 
-          <p>(360) 385-9125</p>
-        </section>
+        <p>(360) 385-9135</p>
+      </section>
 
-        <section>
-          <h3>Diversion</h3>
+      <section>
+        <h3>Jefferson County Superior Court Clerk’s Office</h3>
 
-          <p><a href="http://www.friendshipdiversion.org/">Friendship Diversion</a></p>
+        <p>(360) 385-9125</p>
+      </section>
 
-          <address>
-            <p>
-              2011 Water Street<br>
-              Port Townsend, WA 98368<br>
-              (360) 379-9482
-            </p>
-          </address>
-        </section>
+      <section>
+        <h3>Diversion</h3>
 
-        <section>
-          <h3>Bail Bonds</h3>
+        <p><a href="http://www.friendshipdiversion.org/">Friendship Diversion</a></p>
 
-          <p>Signature Bail Bonds</p>
+        <address>
+          <p>
+            2011 Water Street<br>
+            Port Townsend, WA 98368<br>
+            (360) 379-9482
+          </p>
+        </address>
+      </section>
 
-          <p>(888) 694-6008</p>
+      <section>
+        <h3>Bail Bonds</h3>
 
-          <p>All-Pro Bail Bonds</p>
+        <p>Signature Bail Bonds</p>
 
-          <p>(866) 966-2245</p>
-        </section>
+        <p>(888) 694-6008</p>
 
-        <section>
-          <h3>Civil Legal Aid (Divorce, Child Custody, Tenant Rights, Foreclosure, etc.)</h3>
+        <p>All-Pro Bail Bonds</p>
 
-          <p>Northwest Justice Project</p>
+        <p>(866) 966-2245</p>
+      </section>
 
-          <p>(888) 201-1014</p>
-        </section>
-      </article>
+      <section>
+        <h3>Civil Legal Aid (Divorce, Child Custody, Tenant Rights, Foreclosure, etc.)</h3>
+
+        <p>Northwest Justice Project</p>
+
+        <p>(888) 201-1014</p>
+      </section>
+    </article>
   </main>
 </body>
 </html>
