--- a/about.html
+++ b/about.html
@@ -13,24 +13,38 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
 </head> 
 <body>
-
-  <header role="banner">
+  <nav>
     <img id="logo" src="images/logo.png">
-    <h1>Welcome to Jefferson Associated Counsel</h1>
-
-    <h2>Public Defense Office for Jefferson County, WA</h2>
-
-    <nav>
-        <p>
-          <a href="index.html">home</a>
-          <a href="about.html">about us</a>
-          <a href="resources.html">faq &amp; resources</a>
-          <a href="contact.html">contact us</a>
-        </p>
-    </nav>
-  </header>
+    <dl>
+      <dt>
+        <a href="home.html">Home</a>
+      </dt>
+      <dt>
+        <a class="current" href="about.html">About Us</a>
+      </dt>
+      <dt>
+        <a href="resources.html">Resources</a>
+      </dt>
+      <dt>
+        <a href="contact.html">Contact Us</a>
+      </dt>
+    </dl>
+    <h5>
+      Jefferson
+      <br>
+      Associated
+      <br>
+      Counsel
+    </h5>
+  </nav>
 
   <main role="content">
+    <header role="banner">
+      <h1>Jefferson Associated Counsel</h1>
+
+      <h2>Public Defense Office for Jefferson County, Washington</h2>
+    </header>
+
     <article>
       <header>
         <h1>About Us</h1>
